# snake-qml

./: Body.cpp  Body.h  CMakeLists.txt  CollisionObject.cpp  CollisionObject.h  GameArea.qml  GameManager.cpp  GameManager.h  GameplayManager.cpp  GameplayManager.h  ICollisionObject.cpp  ICollisionObject.h  IMovableObject.h  KeyInputEventFilter.cpp  KeyInputEventFilter.h  Main.qml  Point.cpp  Point.h  README.md  Snake.qml  SnakeData.cpp  SnakeData.h  main.cpp
